# repo-mining-es2

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SETUP_AND_TESTING.md  pyproject.toml  quick_test.sh
.github/workflows/: tests.yml
examples/: dashboard.py  run_analysis.py
repo_mining_es2/: main.py
repohealth/: .gitignore  __init__.py  cli.py  git_analyzer.py  metrics.py  pyproject.toml  pytest.ini  reports.py  requirements.txt  setup.py
repohealth/tests/: __init__.py  test_cli.py  test_git_analyzer.py  test_metrics.py  test_reports.py
tests/: test_basic.py
