[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repohealth"
dynamic = ["version"]
description = "Ferramenta CLI para análise de saúde de repositórios Git."
readme = "../README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "gitpython>=3.1.0",
    "click>=8.1.0",
]

[tool.setuptools.dynamic]
version = { attr = "repohealth.__version__" }

[project.scripts]
repohealth = "repohealth.cli:main"
