[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repohealth"
version = "1.0.0"
description = "Ferramenta CLI para análise de saúde de repositórios Git."
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "gitpython>=3.1.0",
    "click>=8.1.0",
]

[project.scripts]
repohealth = "repohealth.cli:main"
